--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,12 @@
-// Specific CSS for your home-page
+.home{
+background-image: url('unicorn');
+height: 80vh;
+background-size: cover;
+background-position: center;
+}
+
+.home-button {
+  position: relative;
+  top: 50%;
+  left: 10%;
+}
