--- a/app/views/unicorns/edit.html.erb
+++ b/app/views/unicorns/edit.html.erb
@@ -1,1 +1,12 @@
-edit.html.erb
+<div class="container">
+  <div class="row">
+    <div class="col-6 offset-3 mt-4">
+      <h1>Rename your Nextie 🦄</h1>
+      <%= simple_form_for [@unicorn] do |f| %>
+        <%= f.input :name %>
+        <%= f.submit class: "btn btn-primary" %>
+      <% end %>
+      <p class="mt-4"><%= link_to "Back to my Nextie 🦄", unicorn_path(@unicorn) %></p>
+    </div>
+  </div>
+</div>
