minor bug on heroku link to assets

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,5 +1,5 @@
 .home{
-background-image: url('unicorn.jpeg');
+background-image: asset-url('unicorn.jpeg');
 height: 80vh;
 background-size: cover;
 background-position: center;
